updates nav font size, button toggle size. updates link hover state to just be the anchor opacity. updates link component to have the svg's wrapped by the anchor, so they can all change opacity on hover. updates default line svg length to be 4000 to minimize the changes that the length isnt correct on load.

--- a/scss/components/_link.scss
+++ b/scss/components/_link.scss
@@ -50,11 +50,6 @@
   padding-left: var(--s-3);
 }
 
-.link__container:hover .link__text {
-  color: var(--pop-color-1);
-  // border-bottom: 1px solid $pop-color-1;
-}
-
 .link .line-svg--top .line-svg__below,
 .link .line-svg--bottom .line-svg__above {
   fill: var(--darkest-color);
