--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -111,13 +111,29 @@
   width: calc(var(--nav-height) - ( var(--s-1) * 2 ));
   height: calc(var(--nav-height) - ( var(--s-1) * 2 ));
   transform-origin: center center;
-  transform: scale(0.7);
+  transform: scale(0.55);
+
+  @include respond-above(374px) {
+    transform: scale(0.6);
+  }
+
+  @include respond-above(410px) {
+    transform: scale(0.65);
+  }
+
+  @include respond-above(medium) {
+    transform: scale(0.7);
+  }
 }
 
 .nav__open {
   position: absolute;
   opacity: 1;
-  padding-left: var(--s-1);
+  padding-left: 0;
+
+  @include respond-above(medium) {
+    padding-left: var(--s-1);
+  }
   // transition: opacity var(--transition-duration) var(--transition-timing-function);
 }
 
