--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -23,9 +23,9 @@
   --s-2: 1rem;
   --s-3: 2rem;
 
-  --fs-h3: 1.5rem;
+  --fs-h3: 0.8rem;
 
-  @include respond-above(345px) {
+  @include respond-above(340px) {
     --fs-h3: 0.9rem;
   }
 
